# kkj-watch

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml  run_poll.cmd  server.json  smithery.yaml
deploy/: Caddyfile  kkj-api.service  kkj-attest.service  kkj-attest.timer  kkj-jpdir.service  kkj-jpdir.timer  kkj-poll-fast.service  kkj-poll-fast.timer  kkj-poll.service  kkj-poll.timer  kkj-x402probe.service  kkj-x402probe.timer  kkj-x402watch.service  kkj-x402watch.timer  push_to_vps.ps1  setup_vps.sh  x402_diag_headers.py  x402_e2e.py  x402_pay_test.py
kkj/: api_client.py  attest.py  billing.py  classify.py  config.py  discovery.py  doc_watch.py  evaluate.py  extractor.py  fuel.py  jpdir.py  linker.py  llm_budget.py  mcp_server.py  mcpdir.py  paid.py  pipeline.py  selftest.py  semantic.py  server.py  store.py  test_attest.py  test_discovery.py  test_fuel.py  test_jpdir.py  test_mcpdir.py  test_paid.py  test_pipeline.py  test_witness.py  test_x402probe.py  test_x402watch.py  watch.py  witness.py  x402_gate.py  x402probe.py  x402trust.py  x402watch.py
roots/: 2026-07-06.root.json  README.md  latest.json
x402guard/: README.md  __init__.py  __main__.py  guard.py  test_guard.py
